--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.5",
     "@react-navigation/drawer": "^5.8.7",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
+    "expo-asset": "^8.1.7",
+    "expo-calendar": "^8.3.0",
+    "expo-camera": "^8.3.1",
+    "expo-image-manipulator": "^8.2.1",
+    "expo-image-picker": "^8.4.0",
+    "expo-mail-composer": "~8.2.1",
+    "expo-notifications": "~0.3.3",
     "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
