--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.5",
+    "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "^5.8.7",
-    "@react-navigation/native": "^5.7.1",
+    "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
     "expo-asset": "^8.1.7",
