--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-swipeout": "2.3.3",
+    "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
